language-bindings/rust/crates/wamr-sys/src/lib.rs

extern "C" {
    #[doc = " Get WASI exit code.\n\n After a WASI command completed its execution, an embedder can\n call this function to get its exit code. (that is, the value given\n to proc_exit.)\n\n @param module_inst the module instance"]
    pub fn wasm_runtime_get_wasi_exit_code(module_inst: wasm_module_inst_t) -> u32;
}
extern "C" {
    #[doc = " Lookup an exported function in the WASM module instance.\n\n @param module_inst the module instance\n @param name the name of the function\n @param signature the signature of the function, ignored currently\n\n @return the function instance found, NULL if not found"]
    pub fn wasm_runtime_lookup_function(
        module_inst: wasm_module_inst_t,
        name: *const ::core::ffi::c_char,
        signature: *const ::core::ffi::c_char,
    ) -> wasm_function_inst_t;
}
extern "C" {
    #[doc = " Get parameter count of the function instance\n\n @param func_inst the function instance\n @param module_inst the module instance the function instance belongs to\n\n @return the parameter count of the function instance"]
    pub fn wasm_func_get_param_count(
        func_inst: wasm_function_inst_t,
        module_inst: wasm_module_inst_t,
    ) -> u32;
}
extern "C" {
    #[doc = " Get result count of the function instance\n\n @param func_inst the function instance\n @param module_inst the module instance the function instance belongs to\n\n @return the result count of the function instance"]
    pub fn wasm_func_get_result_count(
        func_inst: wasm_function_inst_t,
        module_inst: wasm_module_inst_t,
    ) -> u32;
}
extern "C" {
    #[doc = " Get parameter types of the function instance\n\n @param func_inst the function instance\n @param module_inst the module instance the function instance belongs to\n @param param_types the parameter types returned"]
    pub fn wasm_func_get_param_types(
        func_inst: wasm_function_inst_t,
        module_inst: wasm_module_inst_t,
        param_types: *mut wasm_valkind_t,
    );
}
extern "C" {
    #[doc = " Get result types of the function instance\n\n @param func_inst the function instance\n @param module_inst the module instance the function instance belongs to\n @param result_types the result types returned"]
    pub fn wasm_func_get_result_types(
        func_inst: wasm_function_inst_t,
        module_inst: wasm_module_inst_t,
        result_types: *mut wasm_valkind_t,
    );
}
extern "C" {
    #[doc = " Create execution environment for a WASM module instance.\n\n @param module_inst the module instance\n @param stack_size the stack size to execute a WASM function\n\n @return the execution environment, NULL if failed, e.g. invalid\n         stack size is passed"]
    pub fn wasm_runtime_create_exec_env(
        module_inst: wasm_module_inst_t,
        stack_size: u32,
    ) -> wasm_exec_env_t;
}
extern "C" {
    #[doc = " Destroy the execution environment.\n\n @param exec_env the execution environment to destroy"]
    pub fn wasm_runtime_destroy_exec_env(exec_env: wasm_exec_env_t);
}
extern "C" {
    #[doc = " Get the singleton execution environment for the instance.\n\n Note: The singleton execution environment is the execution\n environment used internally by the runtime for the API functions\n like wasm_application_execute_main, which don't take explicit\n execution environment. It's associated to the corresponding\n module instance and managed by the runtime. The API user should\n not destroy it with wasm_runtime_destroy_exec_env.\n\n @param module_inst the module instance\n\n @return exec_env the execution environment to destroy"]
    pub fn wasm_runtime_get_exec_env_singleton(module_inst: wasm_module_inst_t) -> wasm_exec_env_t;
}
extern "C" {
    #[doc = " Start debug instance based on given execution environment.\n Note:\n   The debug instance will be destroyed during destroying the\n   execution environment, developers don't need to destroy it\n   manually.\n   If the cluster of this execution environment has already\n   been bound to a debug instance, this function will return true\n   directly.\n   If developer spawns some exec_env by wasm_runtime_spawn_exec_env,\n   don't need to call this function for every spawned exec_env as\n   they are sharing the same cluster with the main exec_env.\n\n @param exec_env the execution environment to start debug instance\n @param port     the port for the debug server to listen on.\n                 0 means automatic assignment.\n                 -1 means to use the global setting in RuntimeInitArgs.\n\n @return debug port if success, 0 otherwise."]
    pub fn wasm_runtime_start_debug_instance_with_port(exec_env: wasm_exec_env_t, port: i32)
        -> u32;
}
extern "C" {
    #[doc = " Same as wasm_runtime_start_debug_instance_with_port(env, -1)."]
    pub fn wasm_runtime_start_debug_instance(exec_env: wasm_exec_env_t) -> u32;
}
extern "C" {
    #[doc = " Initialize the thread environment.\n Note:\n   If developer creates a child thread by himself to call the\n   the wasm function in that thread, he should call this API\n   firstly before calling the wasm function and then call\n   wasm_runtime_destroy_thread_env() after calling the wasm\n   function. If the thread is created from the runtime API,\n   it is unnecessary to call these two APIs.\n\n @return true if success, false otherwise"]
    pub fn wasm_runtime_init_thread_env() -> bool;
}
extern "C" {
    #[doc = " Destroy the thread environment"]
    pub fn wasm_runtime_destroy_thread_env();
}
extern "C" {
    #[doc = " Whether the thread environment is initialized"]
    pub fn wasm_runtime_thread_env_inited() -> bool;
}
extern "C" {
    #[doc = " Get WASM module instance from execution environment\n\n @param exec_env the execution environment to retrieve\n\n @return the WASM module instance"]
    pub fn wasm_runtime_get_module_inst(exec_env: wasm_exec_env_t) -> wasm_module_inst_t;
}
extern "C" {
    #[doc = " Set WASM module instance of execution environment\n Caution:\n   normally the module instance is bound with the execution\n   environment one by one, if multiple module instances want\n   to share to the same execution environment, developer should\n   be responsible for the backup and restore of module instance\n\n @param exec_env the execution environment\n @param module_inst the WASM module instance to set"]
    pub fn wasm_runtime_set_module_inst(exec_env: wasm_exec_env_t, module_inst: wasm_module_inst_t);
}
extern "C" {
    #[doc = " Call the given WASM function of a WASM module instance with\n arguments (bytecode and AoT).\n\n @param exec_env the execution environment to call the function,\n   which must be created from wasm_create_exec_env()\n @param function the function to call\n @param argc total cell number that the function parameters occupy,\n   a cell is a slot of the uint32 array argv[], e.g. i32/f32 argument\n   occupies one cell, i64/f64 argument occupies two cells, note that\n   it might be different from the parameter number of the function\n @param argv the arguments. If the function has return value,\n   the first (or first two in case 64-bit return value) element of\n   argv stores the return value of the called WASM function after this\n   function returns.\n\n @return true if success, false otherwise and exception will be thrown,\n   the caller can call wasm_runtime_get_exception to get the exception\n   info."]
    pub fn wasm_runtime_call_wasm(
        exec_env: wasm_exec_env_t,
        function: wasm_function_inst_t,
        argc: u32,
        argv: *mut u32,
    ) -> bool;
}
extern "C" {
    #[doc = " Call the given WASM function of a WASM module instance with\n provided results space and arguments (bytecode and AoT).\n\n @param exec_env the execution environment to call the function,\n   which must be created from wasm_create_exec_env()\n @param function the function to call\n @param num_results the number of results\n @param results the pre-alloced pointer to get the results\n @param num_args the number of arguments\n @param args the arguments\n\n @return true if success, false otherwise and exception will be thrown,\n   the caller can call wasm_runtime_get_exception to get the exception\n   info."]
    pub fn wasm_runtime_call_wasm_a(
        exec_env: wasm_exec_env_t,
        function: wasm_function_inst_t,
        num_results: u32,
        results: *mut wasm_val_t,
        num_args: u32,
        args: *mut wasm_val_t,
    ) -> bool;
}
extern "C" {
    #[doc = " Call the given WASM function of a WASM module instance with\n provided results space and variant arguments (bytecode and AoT).\n\n @param exec_env the execution environment to call the function,\n   which must be created from wasm_create_exec_env()\n @param function the function to call\n @param num_results the number of results\n @param results the pre-alloced pointer to get the results\n @param num_args the number of arguments\n @param ... the variant arguments\n\n @return true if success, false otherwise and exception will be thrown,\n   the caller can call wasm_runtime_get_exception to get the exception\n   info."]
    pub fn wasm_runtime_call_wasm_v(
        exec_env: wasm_exec_env_t,
        function: wasm_function_inst_t,
        num_results: u32,
        results: *mut wasm_val_t,
        num_args: u32,
        ...
    ) -> bool;
}
extern "C" {
    #[doc = " Call a function reference of a given WASM runtime instance with\n arguments.\n\n Note: this can be used to call a function which is not exported\n by the module explicitly. You might consider it as an abstraction\n violation.\n\n @param exec_env the execution environment to call the function\n   which must be created from wasm_create_exec_env()\n @param element_index the function reference index, usually\n   prvovided by the caller of a registed native function\n @param argc the number of arguments\n @param argv the arguments.  If the function method has return value,\n   the first (or first two in case 64-bit return value) element of\n   argv stores the return value of the called WASM function after this\n   function returns.\n\n @return true if success, false otherwise and exception will be thrown,\n   the caller can call wasm_runtime_get_exception to get exception info."]
    pub fn wasm_runtime_call_indirect(
        exec_env: wasm_exec_env_t,
        element_index: u32,
        argc: u32,
        argv: *mut u32,
    ) -> bool;
}
extern "C" {
    #[doc = " Find the unique main function from a WASM module instance\n and execute that function.\n\n @param module_inst the WASM module instance\n @param argc the number of arguments\n @param argv the arguments array, if the main function has return value,\n   *(int*)argv stores the return value of the called main function after\n   this function returns.\n\n @return true if the main function is called, false otherwise and exception\n   will be thrown, the caller can call wasm_runtime_get_exception to get\n   the exception info."]
    pub fn wasm_application_execute_main(
        module_inst: wasm_module_inst_t,
        argc: i32,
        argv: *mut *mut ::core::ffi::c_char,
    ) -> bool;
}
extern "C" {
    #[doc = " Find the specified function in argv[0] from a WASM module instance\n and execute that function.\n\n @param module_inst the WASM module instance\n @param name the name of the function to execute.\n  to indicate the module name via: $module_name$function_name\n  or just a function name: function_name\n @param argc the number of arguments\n @param argv the arguments array\n\n @return true if the specified function is called, false otherwise and\n   exception will be thrown, the caller can call wasm_runtime_get_exception\n   to get the exception info."]
    pub fn wasm_application_execute_func(
        module_inst: wasm_module_inst_t,
        name: *const ::core::ffi::c_char,
        argc: i32,
        argv: *mut *mut ::core::ffi::c_char,
    ) -> bool;
}
